--- a/Extended-Essay-master/Extended-Essay-master/Mandelbrot_NOT_CLOCKED/Mandelbrot_NOT_CLOCKED.runs/impl_1/usage_statistics_webtalk.html
+++ b/Extended-Essay-master/Extended-Essay-master/Mandelbrot_NOT_CLOCKED/Mandelbrot_NOT_CLOCKED.runs/impl_1/usage_statistics_webtalk.html
@@ -2,11 +2,11 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'><H3>Device Usage Page (usage_statistics_webtalk.html)</H3>This HTML page displays the device usage statistics that will be sent to Xilinx.<BR>To see the actual file transmitted to Xilinx, please click <A HREF="./usage_statistics_webtalk.xml">here</A>.<BR><BR><HR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Feb 22 21:50:07 2016</TD>
-  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2015.4 (64-bit)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1412921</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Feb 16 01:38:31 2016</TD>
+  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2015.3 (64-bit)</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1368829</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211056864_1777509941_0_703</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211056864_1777509941_0_105</TD>
   <TD BGCOLOR='#DBE5F1'><B>tool_flow</B></TD><TD>Vivado</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -14,18 +14,18 @@
   <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a35t</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_package</B></TD><TD>cpg236</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_speed</B></TD><TD>-1</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>d804253152bb5a74b3f1d5b70bf51f46</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>7ee1727e3c2353dfba8c4e0e428d18b2</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>e8188c5a3d174ca1976a880790579d02</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>24</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>26</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Microsoft Windows 8 or later , 64-bit</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-4770K CPU @ 3.50GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3492 MHz</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-4300U CPU @ 1.90GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2494 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
-  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>17.000 GB</TD>
+  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>vivado_usage</B></TD></TR>
@@ -49,7 +49,7 @@
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=15</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=16</TD>
 </TR>  </TABLE>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -58,14 +58,14 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=2</TD>
-    <TD>carry4=4765</TD>
+    <TD>carry4=4764</TD>
     <TD>dsp48e1=45</TD>
-    <TD>fdre=6612</TD>
+    <TD>fdre=6605</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdse=1372</TD>
     <TD>gnd=1071</TD>
     <TD>ibuf=11</TD>
     <TD>ldce=1024</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut1=939</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut1=932</TD>
     <TD>lut2=12534</TD>
     <TD>lut3=4268</TD>
     <TD>lut4=2918</TD>
@@ -81,14 +81,14 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=2</TD>
-    <TD>carry4=4765</TD>
+    <TD>carry4=4764</TD>
     <TD>dsp48e1=45</TD>
-    <TD>fdre=6612</TD>
+    <TD>fdre=6605</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdse=1372</TD>
     <TD>gnd=1071</TD>
     <TD>ibuf=11</TD>
     <TD>ldce=1024</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut1=939</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut1=932</TD>
     <TD>lut2=12534</TD>
     <TD>lut3=4268</TD>
     <TD>lut4=2918</TD>
@@ -129,13 +129,13 @@
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tcpg236-1</TD>
     <TD>package=cpg236</TD>
     <TD>speedgrade=-1</TD>
-    <TD>version=2015.4</TD>
+    <TD>version=2015.3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>platform=nt64</TD>
     <TD>temp_grade=commercial</TD>
     <TD>process=typical</TD>
     <TD>simulation_file=None</TD>
 </TR><TR ALIGN='LEFT'>    <TD>netlist_net_matched=NA</TD>
-    <TD>pct_clock_constrained=9.000000</TD>
+    <TD>pct_clock_constrained=13.000000</TD>
     <TD>pct_inputs_defined=9</TD>
     <TD>user_junc_temp=28.1 (C)</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ambient_temp=25.0 (C)</TD>
@@ -164,26 +164,26 @@
     <TD>signal_rate=False</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
     <TD>read_saif=False</TD>
-    <TD>on-chip_power=0.628619</TD>
-    <TD>dynamic=0.555693</TD>
+    <TD>on-chip_power=0.623612</TD>
+    <TD>dynamic=0.550698</TD>
 </TR><TR ALIGN='LEFT'>    <TD>effective_thetaja=5.0</TD>
     <TD>thetasa=4.6 (C/W)</TD>
     <TD>thetajb=7.5 (C/W)</TD>
     <TD>off-chip_power=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>clocks=0.000504</TD>
-    <TD>logic=0.270201</TD>
-    <TD>signals=0.226959</TD>
+</TR><TR ALIGN='LEFT'>    <TD>clocks=0.000570</TD>
+    <TD>logic=0.270072</TD>
+    <TD>signals=0.222027</TD>
     <TD>dsp=0.046230</TD>
 </TR><TR ALIGN='LEFT'>    <TD>i/o=0.011800</TD>
-    <TD>devstatic=0.072926</TD>
+    <TD>devstatic=0.072914</TD>
     <TD>vccint_voltage=1.000000</TD>
-    <TD>vccint_total_current=0.554587</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_dynamic_current=0.543989</TD>
-    <TD>vccint_static_current=0.010598</TD>
+    <TD>vccint_total_current=0.549582</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_dynamic_current=0.538995</TD>
+    <TD>vccint_static_current=0.010588</TD>
     <TD>vccaux_voltage=1.800000</TD>
-    <TD>vccaux_total_current=0.013124</TD>
+    <TD>vccaux_total_current=0.013123</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_dynamic_current=0.000429</TD>
-    <TD>vccaux_static_current=0.012695</TD>
+    <TD>vccaux_static_current=0.012694</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>vcco33_total_current=0.004313</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco33_dynamic_current=0.003313</TD>
@@ -242,26 +242,26 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>slice_logic</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>slice_luts_used=19549</TD>
+<TR ALIGN='LEFT'>    <TD>slice_luts_used=19570</TD>
     <TD>slice_luts_fixed=0</TD>
     <TD>slice_luts_available=20800</TD>
-    <TD>slice_luts_util_percentage=93.99</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=19549</TD>
+    <TD>slice_luts_util_percentage=94.09</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=19570</TD>
     <TD>lut_as_logic_fixed=0</TD>
     <TD>lut_as_logic_available=20800</TD>
-    <TD>lut_as_logic_util_percentage=93.99</TD>
+    <TD>lut_as_logic_util_percentage=94.09</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=8496</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=8489</TD>
     <TD>slice_registers_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
-    <TD>slice_registers_util_percentage=20.42</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_used=7472</TD>
+    <TD>slice_registers_util_percentage=20.41</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_used=7465</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
     <TD>register_as_flip_flop_available=41600</TD>
-    <TD>register_as_flip_flop_util_percentage=17.96</TD>
+    <TD>register_as_flip_flop_util_percentage=17.94</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_used=1024</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_available=41600</TD>
@@ -274,23 +274,23 @@
     <TD>f8_muxes_fixed=0</TD>
     <TD>f8_muxes_available=8150</TD>
     <TD>f8_muxes_util_percentage=1.67</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=6790</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=6928</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_available=8150</TD>
-    <TD>slice_util_percentage=83.31</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slicel_used=4800</TD>
+    <TD>slice_util_percentage=85.01</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slicel_used=4866</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicem_used=1990</TD>
+    <TD>slicem_used=2062</TD>
     <TD>slicem_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=19549</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=19570</TD>
     <TD>lut_as_logic_fixed=0</TD>
     <TD>lut_as_logic_available=20800</TD>
-    <TD>lut_as_logic_util_percentage=93.99</TD>
+    <TD>lut_as_logic_util_percentage=94.09</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_output_only_used=0</TD>
     <TD>using_o5_output_only_fixed=</TD>
-    <TD>using_o6_output_only_used=14745</TD>
+    <TD>using_o6_output_only_used=14795</TD>
     <TD>using_o6_output_only_fixed=</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=4804</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=4775</TD>
     <TD>using_o5_and_o6_fixed=</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -300,18 +300,18 @@
     <TD>lut_as_distributed_ram_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_as_shift_register_fixed=0</TD>
-    <TD>lut_flip_flop_pairs_used=21019</TD>
+    <TD>lut_flip_flop_pairs_used=21113</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_available=20800</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=101.05</TD>
-    <TD>fully_used_lut_ff_pairs_used=6277</TD>
+    <TD>lut_flip_flop_pairs_util_percentage=101.50</TD>
+    <TD>fully_used_lut_ff_pairs_used=6195</TD>
     <TD>fully_used_lut_ff_pairs_fixed=</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_unused_lut_used=1470</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_unused_lut_used=1543</TD>
     <TD>lut_ff_pairs_with_unused_lut_fixed=</TD>
-    <TD>lut_ff_pairs_with_unused_flip_flop_used=13272</TD>
+    <TD>lut_ff_pairs_with_unused_flip_flop_used=13375</TD>
     <TD>lut_ff_pairs_with_unused_flip_flop_fixed=</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_used=1302</TD>
-    <TD>minimum_number_of_registers_lost_to_control_set_restriction_used=7240(Lost)</TD>
+    <TD>minimum_number_of_registers_lost_to_control_set_restriction_used=7239(Lost)</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -418,23 +418,23 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>primitives</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>lut2_used=10772</TD>
+<TR ALIGN='LEFT'>    <TD>lut2_used=10735</TD>
     <TD>lut2_functional_category=LUT</TD>
-    <TD>fdre_used=6324</TD>
+    <TD>fdre_used=6317</TD>
     <TD>fdre_functional_category=Flop &amp; Latch</TD>
-</TR><TR ALIGN='LEFT'>    <TD>carry4_used=4765</TD>
+</TR><TR ALIGN='LEFT'>    <TD>carry4_used=4764</TD>
     <TD>carry4_functional_category=CarryLogic</TD>
-    <TD>lut3_used=4520</TD>
+    <TD>lut3_used=4538</TD>
     <TD>lut3_functional_category=LUT</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut6_used=3354</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut6_used=3312</TD>
     <TD>lut6_functional_category=LUT</TD>
-    <TD>lut5_used=2415</TD>
+    <TD>lut5_used=2463</TD>
     <TD>lut5_functional_category=LUT</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4_used=2235</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4_used=2245</TD>
     <TD>lut4_functional_category=LUT</TD>
     <TD>fdse_used=1148</TD>
     <TD>fdse_functional_category=Flop &amp; Latch</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut1_used=1057</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut1_used=1052</TD>
     <TD>lut1_functional_category=LUT</TD>
     <TD>ldce_used=1024</TD>
     <TD>ldce_functional_category=Flop &amp; Latch</TD>
@@ -455,43 +455,43 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>io_standard</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>lvcmos15=0</TD>
+<TR ALIGN='LEFT'>    <TD>hstl_i=0</TD>
+    <TD>lvcmos15=0</TD>
     <TD>blvds_25=0</TD>
     <TD>lvttl=0</TD>
-    <TD>diff_sstl15=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>hstl_ii=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>diff_sstl15=0</TD>
+    <TD>hstl_ii=0</TD>
     <TD>diff_mobile_ddr=0</TD>
     <TD>lvcmos33=1</TD>
-    <TD>diff_sstl135_r=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>hstl_i=0</TD>
-    <TD>mobile_ddr=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>mobile_ddr=0</TD>
     <TD>lvcmos12=0</TD>
     <TD>lvcmos25=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>pci33_3=0</TD>
-    <TD>hsul_12=0</TD>
+    <TD>pci33_3=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>hsul_12=0</TD>
     <TD>lvcmos18=0</TD>
     <TD>hstl_i_18=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>diff_hsul_12=0</TD>
-    <TD>hstl_ii_18=0</TD>
+    <TD>diff_hsul_12=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>hstl_ii_18=0</TD>
     <TD>sstl18_i=0</TD>
     <TD>sstl18_ii=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>sstl15=0</TD>
-    <TD>sstl15_r=0</TD>
+    <TD>sstl15=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>sstl15_r=0</TD>
     <TD>sstl135=0</TD>
     <TD>sstl135_r=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lvds_25=0</TD>
-    <TD>diff_hstl_i=0</TD>
+    <TD>lvds_25=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>diff_hstl_i=0</TD>
     <TD>rsds_25=0</TD>
     <TD>diff_hstl_ii=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>tmds_33=0</TD>
-    <TD>diff_hstl_i_18=0</TD>
+    <TD>tmds_33=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>diff_hstl_i_18=0</TD>
     <TD>mini_lvds_25=0</TD>
     <TD>diff_hstl_ii_18=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ppds_25=0</TD>
-    <TD>diff_sstl18_i=0</TD>
+    <TD>ppds_25=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>diff_sstl18_i=0</TD>
     <TD>diff_sstl18_ii=0</TD>
     <TD>diff_sstl15_r=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>diff_sstl135=0</TD>
+    <TD>diff_sstl135=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>diff_sstl135_r=0</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -500,8 +500,8 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>lut=20095</TD>
-    <TD>ff=8496</TD>
+<TR ALIGN='LEFT'>    <TD>lut=20077</TD>
+    <TD>ff=8489</TD>
     <TD>bram36=0</TD>
     <TD>bram18=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ctrls=1302</TD>
@@ -511,19 +511,19 @@
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=2</TD>
     <TD>pll=0</TD>
     <TD>bufr=0</TD>
-    <TD>nets=52892</TD>
-</TR><TR ALIGN='LEFT'>    <TD>movable_instances=40217</TD>
-    <TD>pins=252479</TD>
+    <TD>nets=52874</TD>
+</TR><TR ALIGN='LEFT'>    <TD>movable_instances=40201</TD>
+    <TD>pins=252421</TD>
     <TD>bogomips=0</TD>
-    <TD>high_fanout_nets=7</TD>
+    <TD>high_fanout_nets=8</TD>
 </TR><TR ALIGN='LEFT'>    <TD>effort=2</TD>
     <TD>threads=2</TD>
     <TD>router_timing_driven=1</TD>
     <TD>timing_constraints_exist=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>congestion_level=0</TD>
-    <TD>estimated_expansions=20502408</TD>
-    <TD>actual_expansions=9772260</TD>
-    <TD>router_runtime=39.367000</TD>
+    <TD>estimated_expansions=19698342</TD>
+    <TD>actual_expansions=9852552</TD>
+    <TD>router_runtime=59.939000</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -560,9 +560,9 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:04:23s</TD>
-    <TD>memory_peak=1222.645MB</TD>
-    <TD>memory_gain=1035.508MB</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:06:31s</TD>
+    <TD>memory_peak=1218.527MB</TD>
+    <TD>memory_gain=1031.371MB</TD>
     <TD>hls_ip=0</TD>
 </TR>   </TABLE>
    </TD></TR>
